[package]
name = "portus"
version = "0.5.6"
authors = ["Akshay Narayan <akshayn@csail.mit.edu>", "Frank Cangialosi <frankc@csail.mit.edu>", "Deepti Raghavan <deeptir@cs.stanford.edu>"]
description = "A Congestion Control Plane"
homepage = "https://ccp-project.github.io"
documentation = "https://docs.rs/portus"
repository = "https://github.com/ccp-project/portus"
readme = "./README.md"
license = "ISC"
edition = "2018"

[features]
default = []
lang-verbose-errors = ["nom/verbose-errors"]

[dependencies]
bytes = "0.4.5"
clap = "2.32"
colored = "1.7"
crossbeam = "0.7"
itertools = "0.8"
libc = "0.2"
libloading = "0.5"
nix = "0.9.0"
nom = "4"
portus_export = "0.1"
proc-macro2 = "0.4"
unix_socket = "0.5.0"
quote = "0.6"
regex = "1.1"
slog = "2"
slog-async = "2"
slog-term = "2"
structopt = "0.2"
time = "0.1"
toml = "0.4"
walkdir = "2"

[dependencies.syn]
version = "0.15"
features = ["full", "visit", "fold", "extra-traits","parsing"]

[dev-dependencies]
anyhow = "1"
libccp = "1"
minion = "0.1"
