[package]
name = "portus"
version = "0.6.0"
authors = ["Akshay Narayan <akshayn@csail.mit.edu>", "Frank Cangialosi <frankc@csail.mit.edu>", "Deepti Raghavan <deeptir@cs.stanford.edu>"]
description = "A Congestion Control Plane"
homepage = "https://ccp-project.github.io"
documentation = "https://docs.rs/portus"
repository = "https://github.com/ccp-project/portus"
readme = "./README.md"
license = "ISC"
edition = "2018"

[features]
default = []
lang-verbose-errors = ["nom/verbose-errors"]
ccp_bin = ["structopt", "itertools", "quote", "regex", "toml", "proc-macro2", "libloading", "walkdir"]

[dependencies]
bytes          =  "0.4.5"
clap           =  "2.32"
colored        =  "1.7"
crossbeam      =  "0.7"
libc           =  "0.2"
nix            =  "0.9.0"
nom            =  "4"
portus_export  =  "0.1"
slog           =  "2"
slog-async     =  "2"
slog-term      =  "2"
time           =  "0.1"
structopt    =  { version = "0.2", optional = true }
itertools    =  { version = "0.8", optional = true }
quote        =  { version = "0.6", optional = true }
regex        =  { version = "1.1", optional = true }
toml         =  { version = "0.4", optional = true }
proc-macro2  =  { version = "0.4", optional = true }
libloading   =  { version = "0.5", optional = true }
walkdir      =  { version = "2", optional = true }

[dependencies.syn]
version = "0.15"
features = ["full", "visit", "fold", "extra-traits","parsing"]

[dev-dependencies]
anyhow = "1"
libccp = "1"
minion = "0.1"

[[bin]]
name = "ccp"
required-features = ["ccp_bin"]

[[bin]]
name = "cargo-compile-fast-path"
required-features = ["ccp_bin"]
