[package]
name = "portus"
version = "0.8.0"
authors = ["Akshay Narayan <akshayn@csail.mit.edu>", "Frank Cangialosi <frankc@csail.mit.edu>", "Deepti Raghavan <deeptir@cs.stanford.edu>"]
description = "A Congestion Control Plane"
homepage = "https://ccp-project.github.io"
documentation = "https://docs.rs/portus"
repository = "https://github.com/ccp-project/portus"
readme = "./README.md"
license = "ISC"
edition = "2021"

[features]
default = []
ccp-bin = ["syn", "structopt", "itertools", "quote", "regex", "toml", "proc-macro2", "libloading", "walkdir", "colored"]
ipc-latency = ["time"]

[dependencies]
byteorder      =  "1"
clap           =  "3"
crossbeam      =  "0.8"
libc           =  "0.2"
nix            =  "0.23"
nom            =  "7"
portus_export  =  "0.2"
tracing        =  "0.1"
structopt      =  { version = "0.3", optional = true }
itertools      =  { version = "0.10", optional = true }
quote          =  { version = "1", optional = true }
regex          =  { version = "1.1", optional = true }
toml           =  { version = "0.5", optional = true }
proc-macro2    =  { version = "1", optional = true }
libloading     =  { version = "0.7", optional = true }
walkdir        =  { version = "2", optional = true }
syn            =  { version = "1", features = ["full", "visit", "fold", "extra-traits","parsing"], optional = true }
colored        =  { version = "2", optional = true }
time           =  { version = "0.2", optional = true }

[dev-dependencies]
anyhow             = "1"
libccp             = "1.1"
minion             = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "ipc_latency"
required-features = ["ipc-latency"]

[[bin]]
name = "ccp"
required-features = ["ccp-bin"]

[[bin]]
name = "cargo-compile-fast-path"
required-features = ["ccp-bin"]
