[package]
name = "portus_export"
version = "0.2.0"
authors = ["Frank Cangialosi <frankc@csail.mit.edu>", "Akshay Narayan <akshayn@csail.mit.edu>"]
description = "Procedural macro for use with portus, CCP congestion control algorithms"
license = "ISC"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
