[package]
name = "pyportus"
version = "0.4.0"
authors = ["Frank Cangialosi <frankc@csail.mit.edu>"]
description = "A Congestion Control Plane"
homepage = "https://ccp-project.github.io"
license = "ISC"
repository = "https://github.com/ccp-project/portus"

[dependencies]
bytes = "0.4.5"
clap = "2.29"
fnv = "1"
portus = "0.4.2"
simple-signal = "1"
slog = { version = "2" }
slog-async = "2"
slog-term = "2"
time = "0.1"

[dependencies.pyo3]
version = "0.2.7"
features = ["extension-module"]
default-features = false

[features]
bench = []

[lib]
name = "pyportus"
crate-type = ["cdylib", "lib"]
