[package]
name = "pyportus"
version = "0.4.0"
authors = ["Frank Cangialosi <frankc@csail.mit.edu>"]
description = "A Congestion Control Plane"
homepage = "https://ccp-project.github.io"
license = "ISC"
repository = "https://github.com/ccp-project/portus"
edition = "2018"

[dependencies]
bytes = "0.4.5"
clap = "2.29"
portus = "0.5"
simple-signal = "1"

[dependencies.pyo3]
version = "0.2.7"
features = ["extension-module"]
default-features = false

[features]
bench = []

[lib]
name = "pyportus"
crate-type = ["cdylib", "lib"]
