[package]
name = "libccp_integration_test"
version = "0.1.0"
authors = ["Deepti Raghavan <deeptir@mit.edu>", "Akshay Narayan <akshayn@csail.mit.edu>"]

[dependencies]
clap="2.29"
failure = "0.1"
fnv = "1"
minion = "0.1.0"
portus = { path = "../.." }
slog-async = "2"
slog-term = "2"
slog = "2"
time = "0.1"

[build-dependencies]
bindgen = "0.40.0"
